Salesforce Training org/objects/Create_Flow_Exception_handling__e.object
<CustomObject>
    <description>Here This Platform Event is use to Create Exception Error in Flow</description>
    <fields>
        <fullName>Element_Category__c</fullName>
        <description>Here This Field Store Category Of element</description>
        <label>Element Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_Name__c</fullName>
        <label>Element Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Here This Field is Collect Error Message</description>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <description>In This Field Store Flow Name</description>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Here This field Store Object API Name</description>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Create Flow Exception handling</label>
    <pluralLabel>CreateFlowExceptionhandling</pluralLabel>
</CustomObject>